deployment/apps/kiali/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-http-app
  namespace: kiali-operator
spec:
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - kiali.apps.timgiertz.com
  rules:
  - matches:
    backendRefs:
    - name: kiali
      port: 20001
---
